--- a/css/main.css
+++ b/css/main.css
@@ -16,5 +16,22 @@ nav a{
 }
 .center { margin-left: auto;
         margin-right: auto;
-        
+        width:100%;
+        border: 1px solid gray;
+        border-collapse: collapse;
 }
+
+tr, th, td {
+        border: 1px solid gray;
+        border-collapse: collapse;
+}
+
+th, td {
+        padding: 1rem;
+        text-align: left;
+}
+
+p {
+        font-family: sans-serif;
+    }
+
