--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ nav a{
         text-decoration: none;
         font-size: 20px;
 }
-.center { margin-left: auto;
+.table-center { margin-left: auto;
         margin-right: auto;
         width:100%;
         border: 1px solid gray;
