--- a/css/main.css
+++ b/css/main.css
@@ -1,47 +1,36 @@
-h1{
+h1, h2, nav {
         text-align: center;
-}
-
-h2{
-        text-align: center;
-}
-
-nav {
-        text-align: center;
-}
-
-nav a{
+    }
+    
+    nav a {
         text-decoration: none;
         font-size: 20px;
-}
-.table-center { margin-left: auto;
-        margin-right: auto;
-        width:100%;
+    }
+    
+    .table-center {
+        margin: 0 auto;
+        width: 100%;
         border: 1px solid gray;
         border-collapse: collapse;
-}
-
-tr, th, td {
+    }
+    
+    th, td {
         border: 1px solid gray;
-        border-collapse: collapse;
-}
-
-th, td {
         padding: 1rem;
         text-align: left;
-}
-
-p {
-        font-family: sans-serif;
     }
-
-    .photo{
+    
+    .Photo {
         width: 45vw;
         height: 45vw;   
         border-radius: 23vw;
     }
-
-    .photo:hover {
-        border-radius: 0vw;
-        
+    
+    .Photo:hover {
+        border-radius: 0;
     }
+    
+    p {
+        font-family: sans-serif;
+    }
+    
